--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms.Android/Properties/AndroidManifest.xml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.TestingSystem.XamarinForms">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.yushchenko.TestingSystem.XamarinForms" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<application android:label="TestingSystem.XamarinForms.Android"></application>
+	<application android:label="TestingSystem"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
