--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms.iOS/TestingSystem.XamarinForms.iOS.csproj
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms.iOS/TestingSystem.XamarinForms.iOS.csproj
@@ -133,6 +133,9 @@
     <PackageReference Include="ThriveGmbH.BottomNavigationBar.LATEST">
       <Version>1.0.6</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Connectivity">
+      <Version>3.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle">
       <Version>3.0.0.5</Version>
     </PackageReference>
