--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms.iOS/TestingSystem.XamarinForms.iOS.csproj
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms.iOS/TestingSystem.XamarinForms.iOS.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="SQLite\SQLiteiOSProvider.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
