--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms.iOS/TestingSystem.XamarinForms.iOS.csproj
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms.iOS/TestingSystem.XamarinForms.iOS.csproj
@@ -128,6 +128,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="PhotoBrowser.Forms">
+      <Version>0.1.4</Version>
+    </PackageReference>
     <PackageReference Include="Rg.Plugins.Popup">
       <Version>1.1.5.188</Version>
     </PackageReference>
